k8s/litter-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: litter
  template:
    metadata:
      labels:
        deployment.name: litter
    spec:
      containers:
        - name: litter
          image: gitlab.lnu.se:5050/2dv013/student/team-5-burmese/2dv013-cloud-native-assignment-3-frontend/litter:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred # Secret set as a secret in the cluster
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: litter
  name: litter
spec:
  ports:
    - name: "litter-port"
      port: 80
      targetPort: 80
  selector:
    deployment.name: litter

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litter-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litter
                port:
                  number: 80
          - path: /(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: litter
                port:
                  number: 80
